--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3B.cfg
@@ -1065,6 +1065,7 @@ router bgp 65103
       router-id 192.168.255.13
       update wait-install
       neighbor 172.31.12.6 peer group MLAG-PEERS
+      neighbor 172.31.12.6 description DC1-SVC3A
    !
    vrf Tenant_A_OP_Zone
       rd 65103:9
