--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3A.cfg
@@ -1100,6 +1100,7 @@ router bgp 65103
       router-id 192.168.255.12
       update wait-install
       neighbor 172.31.12.7 peer group MLAG-PEERS
+      neighbor 172.31.12.7 description DC1-SVC3B
    !
    vrf Tenant_A_OP_Zone
       rd 65103:9
