--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SVC3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SVC3A.yml
@@ -159,6 +159,7 @@ router_bgp:
     neighbors:
     - ip_address: 172.31.12.7
       peer_group: MLAG-PEERS
+      description: DC1-SVC3B
     updates:
       wait_install: true
   - name: Tenant_A_OP_Zone
