Updated sflow settings

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -120,6 +120,7 @@ all:
             source-interfaces-tacacs-missing-inband-mgmt-interface:
             source-interfaces-tacacs-missing-mgmt-ip:
             ul-filter-evpn-default-vrf-services:
+            sflow-settings-missing-destinations:
             sflow-settings-missing-inband-mgmt-interface:
             sflow-settings-missing-mgmt-ip:
             core-interfaces-p2p-links-as:
