updated error message

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/sflow-settings-missing-destinations.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/sflow-settings-missing-destinations.yml
@@ -16,4 +16,4 @@ servers:
         sflow: true
 
 expected_error_message: >-
-  sFlow is enabled but `sflow_settings.destination` is not configured.
+  Unable to configure `sflow` because it is enabled on interface but `sflow_settings.destinations` is not configured.
