--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -1,9 +1,11 @@
 !
 interface Port-Channel2
+   description Test_mode_and_vlans
    switchport
    switchport access vlan 100
 !
 interface Port-Channel3
+   description Test_trunk_groups_and_native_vlan
    switchport
    switchport trunk allowed vlan 110
    switchport trunk native vlan 10
@@ -12,6 +14,7 @@ interface Port-Channel3
    switchport trunk group group2
 !
 interface Port-Channel4
+   description Test_native_vlan_tag_and_phone
    switchport
    switchport trunk native vlan tag
    switchport phone vlan 20
@@ -19,12 +22,38 @@ interface Port-Channel4
    switchport mode trunk phone
 !
 interface Port-Channel5
+   description Test_vlan_translations
    switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
    switchport vlan translation in 23 50
    switchport vlan translation out 25 49
    switchport vlan translation 34 60
+!
+interface Port-Channel6
+   description Test_encapsulation_dot1q_vlan
+   encapsulation dot1q vlan 20
+!
+interface Port-Channel7
+   description Test_encapsulation_vlan1
+   encapsulation vlan
+      client dot1q 10 network dot1q 20
+!
+interface Port-Channel8
+   description Test_encapsulation_vlan2
+   encapsulation vlan
+      client dot1q outer 10 inner 12
+!
+interface Port-Channel9
+   description Test_encapsulation_vlan3
+   encapsulation vlan
+      client unmatched
+!
+interface Port-Channel10
+   description Test_encapsulation_vlan4
+   vlan id 100
+   encapsulation vlan
+      client dot1q outer 10 inner 12 network dot1q outer 20 inner 22
 !
 interface Ethernet1
    description Test_mode_and_vlans
@@ -79,6 +108,7 @@ interface Ethernet8
 !
 interface Ethernet9
    description Test_encapsulation_vlan4
+   vlan id 100
    encapsulation vlan
       client dot1q outer 10 inner 12 network dot1q outer 20 inner 22
 !
