--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -217,7 +217,7 @@ interface Port-Channel100.102
    no logging event link-status
    logging event storm-control discards
    mtu 1500
-   encapsulation dot1q vlan 102
+   encapsulation dot1q vlan 102 inner 110
    vrf C2
    ip address 10.1.2.3/31
 !
@@ -325,7 +325,7 @@ interface Port-Channel111.300
 interface Port-Channel111.400
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
-      client dot1q outer 400 inner 20 network dot1q outer 21 inner 401
+      client dot1q outer 400 inner 20 network dot1q outer 401 inner 21
 !
 interface Port-Channel111.1000
    description L2 Subinterface
@@ -413,6 +413,56 @@ interface Port-Channel131
    switchport access vlan 115
    switchport mode dot1q-tunnel
    switchport
+!
+interface Port-Channel131.1
+   description Test_encapsulation_vlan1
+   encapsulation vlan
+      client dot1q outer 23 inner 45 network dot1ad outer 32 inner 54
+!
+interface Port-Channel131.2
+   description Test_encapsulation_vlan2
+   encapsulation vlan
+      client dot1q 10 network dot1q outer 32 inner 54
+!
+interface Port-Channel131.3
+   description Test_encapsulation_vlan3
+   encapsulation vlan
+      client dot1ad 12 network dot1q 25
+!
+interface Port-Channel131.4
+   description Test_encapsulation_vlan4
+   encapsulation vlan
+      client dot1ad outer 35 inner 60 network dot1q outer 53 inner 6
+!
+interface Port-Channel131.5
+   description Test_encapsulation_vlan5
+   encapsulation vlan
+      client dot1ad outer 35 inner 60 network dot1ad outer 52 inner 62
+!
+interface Port-Channel131.6
+   description Test_encapsulation_vlan6
+   encapsulation vlan
+      client dot1ad outer 35 inner 60 network client
+!
+interface Port-Channel131.7
+   description Test_encapsulation_vlan7
+   encapsulation vlan
+      client untagged network dot1ad outer 35 inner 60
+!
+interface Port-Channel131.8
+   description Test_encapsulation_vlan8
+   encapsulation vlan
+      client untagged network dot1q outer 35 inner 60
+!
+interface Port-Channel131.9
+   description Test_encapsulation_vlan9
+   encapsulation vlan
+      client untagged network untagged
+!
+interface Port-Channel131.10
+   description Test_encapsulation_vlan9
+   encapsulation vlan
+      client dot1q outer 14 inner 11 network client inner
 !
 interface Ethernet3
    description MLAG_PEER_DC1-LEAF1B_Ethernet3
