reverted back with default value

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity-2.cfg
@@ -16,6 +16,6 @@ monitor connectivity
    interval 5
    shutdown
    interface set HOST_SET2 Loopback2-4, Loopback10-12
-   local-interfaces HOST_SET2 address-only default
+   local-interfaces HOST_SET2 default
 !
 end
