--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-connectivity-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-connectivity-2.yml
@@ -7,4 +7,4 @@ monitor_connectivity:
     - name: HOST_SET2
       interfaces: Loopback2-4, Loopback10-12
   local_interfaces: HOST_SET2
-  address_only: true
+  address_only: false
