--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
@@ -17,7 +17,7 @@ monitor connectivity
    no shutdown
    interface set GLOBAL_SET Ethernet1-4
    interface set HOST_SET Loopback2-4, Loopback10-12
-   local-interfaces GLOBAL_SET default
+   local-interfaces GLOBAL_SET address-only default
    !
    host server1
       description
@@ -29,7 +29,7 @@ monitor connectivity
    host server2
       description
       server2_connectivity_monitor
-      local-interfaces HOST_SET
+      local-interfaces HOST_SET address-only
       ip 10.10.10.2
       url https://server2.local.com
    !
@@ -42,7 +42,7 @@ monitor connectivity
    host server4
    vrf blue
       interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
-      local-interfaces VRF_GLOBAL_SET address-only default
+      local-interfaces VRF_GLOBAL_SET default
       !
       host server4
          description
@@ -62,14 +62,14 @@ monitor connectivity
    vrf red
       interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
       interface set VRF_HOST_SET Loopback12-14, 19-23
-      local-interfaces VRF_GLOBAL_SET default
+      local-interfaces VRF_GLOBAL_SET address-only default
       description
       vrf_connectivity_monitor
       !
       host server2
          description
          server2_connectivity_monitor
-         local-interfaces VRF_HOST_SET
+         local-interfaces VRF_HOST_SET address-only
          ip 10.10.20.1
          url https://server2.local.com
    vrf yellow
