Apply suggestions from code review
Co-authored-by: Vibhu-gslab <109593615+Vibhu-gslab@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/sflow-settings-missing-destinations.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/sflow-settings-missing-destinations.yml
@@ -12,4 +12,4 @@ servers:
         sflow: true
 
 expected_error_message: >-
-  Unable to configure `sflow` because it is enabled on interface but `sflow_settings.destinations` is not configured.
+  `sflow_settings.destinations` is required to configure `sflow`.
