--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1A.yml
@@ -530,7 +530,8 @@ ethernet_interfaces:
   description: My test
   ip_address: 10.3.2.1/21
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   mtu: 1500
   peer: MY-own-peer
   peer_interface: Ethernet123
