--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
@@ -29,5 +29,6 @@ ip_igmp_snooping:
   globally_enabled: true
 ethernet_interfaces:
 - name: Ethernet12
-  type: switched
+  switchport:
+    enabled: true
   description: Interface Created from platform_settings.structured_config
