--- a/ansible_collections/arista/avd/molecule/evpn_underlay_ebgp_overlay_ebgp/intended/structured_configs/DC1-BL1B.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_ebgp_overlay_ebgp/intended/structured_configs/DC1-BL1B.yml
@@ -439,7 +439,8 @@ ethernet_interfaces:
   description: My second test
   ip_address: 10.1.2.3/12
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   mtu: 1500
   peer: MY-own-peer
   peer_interface: Ethernet123
