--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -330,7 +330,8 @@ ethernet_interfaces:
   - name: Ethernet7
     description: Molecule L2
     shutdown: false
-    type: switched
+    switchport:
+      enabled: true
     mtu: 7000
     ptp:
       enable: true
@@ -371,7 +372,8 @@ ethernet_interfaces:
 
   - name: Ethernet8
     description: to WAN-ISP1-01 Ethernet2
-    type: routed
+    switchport:
+      enabled: false
     lldp:
       transmit: false
       receive: false
@@ -386,7 +388,8 @@ ethernet_interfaces:
 
   - name: Ethernet9
     description: interface_with_mpls_enabled
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.128.9/31
     multicast:
       ipv4:
@@ -402,7 +405,8 @@ ethernet_interfaces:
 
   - name: Ethernet10
     description: interface_with_mpls_disabled
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.128.10/31
     mpls:
       ip: false
@@ -496,7 +500,8 @@ ethernet_interfaces:
   - name: Ethernet18
     description: PBR Description
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 192.0.2.1/31
     service_policy:
       pbr:
@@ -515,13 +520,15 @@ ethernet_interfaces:
 
   - name: Ethernet20
     description: Port patched through patch-panel to pseudowire
-    type: routed
+    switchport:
+      enabled: false
     lldp:
       transmit: false
       receive: false
 
   - name: Ethernet21
-    type: switched
+    switchport:
+      enabled: true
     description: 200MBit/s shape
     qos:
       trust: disabled
@@ -529,32 +536,37 @@ ethernet_interfaces:
       rate: "200000 kbps"
 
   - name: Ethernet22
-    type: switched
+    switchport:
+      enabled: true
     description: 10% shape
     shape:
       rate: "10 percent"
 
   - name: Ethernet23
-    type: switched
+    switchport:
+      enabled: true
     description: Error-correction encoding
     error_correction_encoding:
       fire_code: true
       reed_solomon: true
 
   - name: Ethernet24
-    type: switched
+    switchport:
+      enabled: true
     description: Disable error-correction encoding
     error_correction_encoding:
       enabled: false
 
   - name: Ethernet25
-    type: switched
+    switchport:
+      enabled: true
     description: Molecule MAC
     mac_access_group_in: MAC_ACL_IN
     mac_access_group_out: MAC_ACL_OUT
 
   - name: Ethernet26
-    type: routed
+    switchport:
+      enabled: false
 
   - name: Ethernet26.1
     description: TENANT_A pseudowire 1 interface
@@ -612,7 +624,8 @@ ethernet_interfaces:
         protocol: client
 
   - name: Ethernet27
-    type: switched
+    switchport:
+      enabled: true
     description: EVPN-Vxlan single-active redundancy
     evpn_ethernet_segment:
       identifier: "0000:0000:0000:0102:0304"
@@ -626,7 +639,8 @@ ethernet_interfaces:
         candidate_reachability_required: true
 
   - name: Ethernet28
-    type: switched
+    switchport:
+      enabled: true
     description: EVPN-MPLS multihoming
     evpn_ethernet_segment:
       identifier: "0000:0000:0000:0102:0305"
@@ -636,41 +650,47 @@ ethernet_interfaces:
         tunnel_flood_filter_time: 100
 
   - name: Ethernet29
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - auto phone true
     dot1x:
       port_control: auto
       port_control_force_authorized_phone: true
 
   - name: Ethernet30
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - force-authorized phone false
     dot1x:
       port_control: force-authorized
       port_control_force_authorized_phone: false
 
   - name: Ethernet31
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - force-unauthorized - no phone
     dot1x:
       port_control: force-unauthorized
 
   - name: Ethernet32
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - auto reauthentication
     dot1x:
       port_control: auto
       reauthentication: true
 
   - name: Ethernet33
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - pae mode authenticator
     dot1x:
       pae:
         mode: authenticator
 
   - name: Ethernet34
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - authentication_failure allow
     dot1x:
       authentication_failure:
@@ -678,28 +698,32 @@ ethernet_interfaces:
         allow_vlan: 800
 
   - name: Ethernet35
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - authentication_failure drop
     dot1x:
       authentication_failure:
         action: drop
 
   - name: Ethernet36
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - host-mode single-host
     dot1x:
       host_mode:
         mode: single-host
 
   - name: Ethernet37
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - host-mode multi-host
     dot1x:
       host_mode:
         mode: multi-host
 
   - name: Ethernet38
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - host-mode multi-host authenticated
     dot1x:
       host_mode:
@@ -707,7 +731,8 @@ ethernet_interfaces:
         multi_host_authenticated: true
 
   - name: Ethernet39
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - mac_based_authentication host-mode common true
     dot1x:
       mac_based_authentication:
@@ -715,7 +740,8 @@ ethernet_interfaces:
         host_mode_common: true
 
   - name: Ethernet40
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - mac_based_authentication always
     dot1x:
       mac_based_authentication:
@@ -723,7 +749,8 @@ ethernet_interfaces:
         always: true
 
   - name: Ethernet41
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - mac_based_authentication always and host-mode common
     dot1x:
       mac_based_authentication:
@@ -732,14 +759,16 @@ ethernet_interfaces:
         host_mode_common: true
 
   - name: Ethernet42
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - mac_based_authentication
     dot1x:
       mac_based_authentication:
         enabled: true
 
   - name: Ethernet43
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - timeout values
     dot1x:
       timeout:
@@ -750,7 +779,8 @@ ethernet_interfaces:
         tx_period: 6
 
   - name: Ethernet44
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - reauthorization_request_limit
     dot1x:
       reauthorization_request_limit: 3
@@ -758,7 +788,8 @@ ethernet_interfaces:
         disabled: true
 
   - name: Ethernet45
-    type: switched
+    switchport:
+      enabled: true
     description: DOT1X Testing - all features
     dot1x:
       port_control: auto
@@ -800,7 +831,8 @@ ethernet_interfaces:
 
   - name: Ethernet47
     description: IP Helper
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.1/31
     ip_helpers:
       - ip_helper: 10.10.96.101
@@ -814,24 +846,28 @@ ethernet_interfaces:
 
   - name: Ethernet48
     description: Load Interval
-    type: switched
+    switchport:
+      enabled: true
     load_interval: 5
 
   - name: Ethernet50
-    type: switched
+    switchport:
+      enabled: true
     description: SFlow Interface Testing - SFlow ingress enabled
     sflow:
       enable: true
 
   - name: Ethernet51
-    type: switched
+    switchport:
+      enabled: true
     description: SFlow Interface Testing - SFlow egress enabled
     sflow:
       egress:
         enable: true
 
   - name: Ethernet52
-    type: switched
+    switchport:
+      enabled: true
     description: SFlow Interface Testing - SFlow ingress and egress unmodified enabled
     sflow:
       enable: true
@@ -839,7 +875,8 @@ ethernet_interfaces:
         unmodified_enable: true
 
   - name: Ethernet53
-    type: switched
+    switchport:
+      enabled: true
     description: SFlow Interface Testing - SFlow ingress and egress disabled
     sflow:
       enable: false
@@ -847,7 +884,8 @@ ethernet_interfaces:
         enable: false
 
   - name: Ethernet54
-    type: switched
+    switchport:
+      enabled: true
     description: SFlow Interface Testing - SFlow ingress and egress unmodified disabled
     sflow:
       enable: false
@@ -856,7 +894,8 @@ ethernet_interfaces:
 
   - name: Ethernet55
     description: DHCPv6 Relay Testing
-    type: routed
+    switchport:
+      enabled: false
     shutdown: false
     ipv6_address: a0::1/64
     ipv6_dhcp_relay_destinations:
@@ -868,7 +907,8 @@ ethernet_interfaces:
         local_interface: Loopback55
 
   - name: Ethernet56
-    type: switched
+    switchport:
+      enabled: true
     description: Interface with poe commands and limit in class
     poe:
       priority: low
@@ -885,7 +925,8 @@ ethernet_interfaces:
       negotiation_lldp: false
 
   - name: Ethernet57
-    type: switched
+    switchport:
+      enabled: true
     description: Interface with poe commands and limit in watts
     poe:
       disabled: false
@@ -903,13 +944,15 @@ ethernet_interfaces:
       negotiation_lldp: true
 
   - name: Ethernet58
-    type: switched
+    switchport:
+      enabled: true
     description: Interface with poe disabled and no other poe keys
     poe:
       disabled: true
 
   - name: Ethernet60
-    type: switched
+    switchport:
+      enabled: true
     description: IP NAT Testing
     ip_nat:
       destination:
@@ -1083,26 +1126,30 @@ ethernet_interfaces:
 
   - name: Ethernet63
     description: DHCP client interface
-    type: routed
+    switchport:
+      enabled: false
     ip_address: "dhcp"
     dhcp_client_accept_default_route: true
 
   - name: Ethernet64
     description: DHCP server interface
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 192.168.42.42/24
     dhcp_server_ipv4: true
     dhcp_server_ipv6: true
 
   - name: Ethernet69
-    type: switched
+    switchport:
+      enabled: true
     description: IP NAT service-profile
     ip_nat:
       service_profile: TEST-NAT-PROFILE
 # VRRP
   - name: Ethernet65
     description: Multiple VRIDs
-    type: routed
+    switchport:
+      enabled: false
     shutdown: false
     ip_address: 192.0.2.2/25
     ipv6_enable: true
@@ -1130,7 +1177,8 @@ ethernet_interfaces:
   - name: Ethernet66
     description: Multiple VRIDs and tracking
     shutdown: false
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 192.0.2.2/25
     ipv6_enable: true
     ipv6_address: 2001:db8::2/64
@@ -1174,7 +1222,8 @@ ethernet_interfaces:
           version: 3
 # Transceiver Frequency
   - name: Ethernet67
-    type: switched
+    switchport:
+      enabled: true
     description: Custom_Transceiver_Frequency
     shutdown: false
     transceiver:
@@ -1187,7 +1236,8 @@ ethernet_interfaces:
       inner_vlan: 34
 
   - name: Ethernet68
-    type: switched
+    switchport:
+      enabled: true
     description: Custom_Transceiver_Frequency
     shutdown: false
     transceiver:
