--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
@@ -289,7 +289,8 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE1_Ethernet1
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.1/31
     service_profile: test
     service_policy:
@@ -320,7 +321,6 @@ ethernet_interfaces:
             count: true
 
   - name: Ethernet3
-    type: port-channel-member
     peer: DC1-LEAF1B
     peer_interface: Ethernet3
     peer_type: mlag_peer
@@ -330,7 +330,6 @@ ethernet_interfaces:
       mode: active
 
   - name: Ethernet4
-    type: port-channel-member
     peer: DC1-LEAF1B
     peer_interface: Ethernet4
     peer_type: mlag_peer
