--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
@@ -138,7 +138,8 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_EAPI-SPINE1_Ethernet1
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.1/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
@@ -149,13 +150,13 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_EAPI-SPINE2_Ethernet1
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.3/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
     isis_network_point_to_point: true
   - name: Ethernet3
-    type: port-channel-member
     peer: EAPI-LEAF1B
     peer_interface: Ethernet3
     peer_type: mlag_peer
