--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -81,7 +81,8 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_EAPI-SPINE1_Ethernet1
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.1/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
@@ -92,14 +93,14 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_EAPI-SPINE2_Ethernet1
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.3/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
     isis_network_point_to_point: true
     isis_circuit_type: level-1-2
   - name: Ethernet3
-    type: port-channel-member
     peer: EAPI-LEAF1B
     peer_interface: Ethernet3
     peer_type: mlag_peer
@@ -108,21 +109,18 @@ ethernet_interfaces:
       id: 3
       mode: active
   - name: Ethernet4
-    type: port-channel-member
     peer: DC1-LEAF1B
     peer_interface: Ethernet4
     channel_group:
       id: 4
       mode: active
   - name: Ethernet5
-    type: port-channel-member
     peer: DC1-LEAF1B
     peer_interface: Ethernet5
     channel_group:
       id: 5
       mode: active
   - name: Ethernet6
-    type: port-channel-member
     peer: DC1-LEAF1B
     peer_interface: Ethernet6
     channel_group:
@@ -186,20 +184,23 @@ vlan_interfaces:
 ### Port-Channel Interfaces ###
 port_channel_interfaces:
   - name: Port-Channel4
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 10.9.2.3/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
     isis_network_point_to_point: true
     isis_circuit_type: level-2
   - name: Port-Channel5
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 10.9.2.5/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 50
     isis_passive: true
   - name: Port-Channel6
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 10.9.2.7/31
     isis_enable: EVPN_UNDERLAY
     isis_metric: 100
