--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/sync-e.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/sync-e.yml
@@ -24,14 +24,14 @@ ethernet_interfaces:
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE1_Ethernet6
     mtu: 1500
-    type: routed
+    switchport:
+      enabled: false
     ip_address: 172.31.255.15/31
     sync_e:
       enable: true
       priority: disabled
 # port-channel interfaces
   - name: Ethernet5
-    type: port-channel-member
     peer: DC1-AGG01
     peer_interface: Ethernet1
     peer_type: l2leaf
