--- a/ansible_collections/arista/avd/molecule/evpn_underlay_rfc5549_overlay_ebgp/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_rfc5549_overlay_ebgp/intended/structured_configs/DC1-BL1A.yml
@@ -360,7 +360,8 @@ ethernet_interfaces:
   description: My test
   ip_address: 10.1.2.3/12
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   mtu: 1500
   peer: MY-own-peer
   peer_interface: Ethernet123
