Fix template Add inital testing

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -133,6 +133,7 @@ router-bgp-base
 router-bgp-evpn
 router-bgp-evpn-vpn-import-pruning
 router-bgp-evpn-mpls
+router-bgp-ipv4-labeled-unicast
 router-bgp-link-state
 router-bgp-path-selection
 router-bgp-rtc
