Peer groups enabled Added tests Updated generated markdown

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-ipv4-labeled-unicast.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-ipv4-labeled-unicast.cfg
@@ -23,8 +23,12 @@ router bgp 65101
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
    neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65101
+   neighbor PG-BGP-LU peer group
+   neighbor PG-BGP-LU remote-as 65555
+   neighbor PG-BGP-LU update-source Loopback0
    neighbor 192.168.255.1 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 198.51.100.3 peer group PG-BGP-LU
    !
    address-family ipv4 labeled-unicast
       update wait-for-convergence
@@ -32,6 +36,7 @@ router bgp 65101
       bgp additional-paths receive
       bgp additional-paths send ecmp
       bgp next-hop-unchanged
+      neighbor PG-BGP-LU activate
       neighbor 198.51.100.1 activate
       neighbor 198.51.100.1 additional-paths receive
       neighbor 198.51.100.1 rcf in RCF_TEST(ARGS)
