--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-ipv4-labeled-unicast.yml
@@ -8,6 +8,10 @@ router_bgp:
     - graceful-restart
     - maximum-paths 2 ecmp 2
   peer_groups:
+    - name: PG-BGP-LU
+      type: IPv4 Labeled-Unicast
+      remote_as: 65555
+      update_source: Loopback0
     - name: EVPN-OVERLAY-PEERS
       type: evpn
       remote_as: 65001
@@ -36,6 +40,8 @@ router_bgp:
       peer_group: EVPN-OVERLAY-PEERS
     - ip_address: 192.168.255.2
       peer_group: EVPN-OVERLAY-PEERS
+    - ip_address: 198.51.100.3
+      peer_group: PG-BGP-LU
   address_family_ipv4_labeled_unicast:
     update_wait_for_convergence: true
     aigp_session:
@@ -76,3 +82,6 @@ router_bgp:
           stale_route_map: RM_STALE
         next_hop_unchanged: true
         route_map_out: RM_OUT_TEST
+    peer_groups:
+      - name: PG-BGP-LU
+        activate: true
