--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/failure-missing-evpn-multicast-with-pim.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/failure-missing-evpn-multicast-with-pim.yml
@@ -1,6 +1,8 @@
 type: l3leaf
 underlay_multicast: true
-evpn_multicast: true
+# When this is set to false, the VRF won't have evpn_l3_multicast enabled
+# and PIM will fail
+evpn_multicast: false
 
 l3leaf:
   defaults:
@@ -9,7 +11,7 @@ l3leaf:
     vtep_loopback_ipv4_pool: 10.11.0.0/24
     vtep_loopback: Loopback1
   nodes:
-    - name: failure-missing-evpn-multicast-l3-with-pim
+    - name: failure-missing-evpn-multicast-with-pim
       id: 3
       bgp_as: 65101
       filter:
@@ -19,7 +21,7 @@ tenants:
   - name: FABRIC
     mac_vrf_vni_base: 10000
     evpn_l3_multicast:
-      enabled: false
+      enabled: true
       evpn_underlay_l3_multicast_group_ipv4_pool: 232.0.0.0/20
     vrfs:
       - name: Tenant_A_OP_Zone_MC
@@ -33,7 +35,7 @@ tenants:
             name: Tenant_A_OP_Zone_1
             tags: ['evpn-multicast-l3']
         l3_interfaces:
-          - nodes: [ failure-missing-evpn-multicast-l3-with-pim ]
+          - nodes: [ failure-missing-evpn-multicast-with-pim ]
             interfaces: [ Ethernet1 ]
             ip_addresses: [ 10.254.248.0/31 ]
             descriptions: [ "L3 Link to RPs" ]
@@ -42,5 +44,5 @@ tenants:
               enabled: true
 
 expected_error_message: >-
-  'pim: enabled' set on l3_interface 'Ethernet1' on 'failure-missing-evpn-multicast-l3-with-pim'
-  requires 'evpn_l3_multicast.enabled: true' under VRF 'Tenant_A_OP_Zone_MC' or Tenant 'FABRIC'
+  'pim: enabled' set on l3_interface 'Ethernet1' on 'failure-missing-evpn-multicast-with-pim'
+  requires 'evpn_multicast: true' at the fabric level
