--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
@@ -30,6 +30,8 @@ monitor connectivity
       server3_connectivity_monitor
       local-interfaces HOST_SET
       ip 10.10.10.3
+   !
+   host server4
    vrf blue
       interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
       local-interfaces VRF_GLOBAL_SET default
@@ -37,9 +39,18 @@ monitor connectivity
       host server4
          description
          server4_connectivity_monitor
-         local-interfaces VRF_HOST_SET
+         local-interfaces VRF_GLOBAL_SET
          ip 10.10.20.1
          url https://server2.local.com
+      !
+      host server5
+         description
+         server5_connectivity_monitor
+         local-interfaces VRF_GLOBAL_SET address-only
+         ip 10.10.20.11
+         url https://server5.local.com
+      !
+      host server6
    vrf red
       interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
       interface set VRF_HOST_SET Loopback12-14, 19-23
@@ -53,3 +64,4 @@ monitor connectivity
          local-interfaces VRF_HOST_SET address-only
          ip 10.10.20.1
          url https://server2.local.com
+   vrf yellow
