Added inner_protocol key and some fixes

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -432,7 +432,7 @@ interface Port-Channel131.3
 interface Port-Channel131.4
    description Test_encapsulation_vlan4
    encapsulation vlan
-      client dot1ad outer 35 inner 60 network dot1q outer 53 inner 6
+      client dot1ad outer 35 inner dot1q 60 network dot1q outer 53 inner dot1ad 6
 !
 interface Port-Channel131.5
    description Test_encapsulation_vlan5
