--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -1203,10 +1203,12 @@ ethernet_interfaces:
         outer: 23
         inner: 45
         protocol: dot1q
+        inner_protocol: dot1q
       network:
         protocol: dot1ad
         outer: 32
         inner: 54
+        inner_protocol: dot1ad
 
   - name: Ethernet68.2
     description: Test_encapsulation_vlan2
@@ -1236,10 +1238,12 @@ ethernet_interfaces:
         protocol: dot1ad
         outer: 35
         inner: 60
+        inner_protocol: dot1q
       network:
         protocol: dot1q
         outer: 53
         inner: 6
+        inner_protocol: dot1ad
 
   - name: Ethernet68.5
     description: Test_encapsulation_vlan5
