--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -721,7 +721,7 @@ interface Ethernet68.3
 interface Ethernet68.4
    description Test_encapsulation_vlan4
    encapsulation vlan
-      client dot1ad outer 35 inner 60 network dot1q outer 53 inner 6
+      client dot1ad outer 35 inner dot1q 60 network dot1q outer 53 inner dot1ad 6
 !
 interface Ethernet68.5
    description Test_encapsulation_vlan5
