Refactor(eos_cli_config_gen,eos_designs): Update router_ospf.redistribute.x with enabled keys

--- a/ansible_collections/arista/avd/examples/campus-fabric/intended/structured_configs/SPINE1.yml
+++ b/ansible_collections/arista/avd/examples/campus-fabric/intended/structured_configs/SPINE1.yml
@@ -330,7 +330,8 @@ router_ospf:
     - Ethernet52/1
     bfd_enable: false
     redistribute:
-      connected: {}
+      connected:
+        enabled: true
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:dc:01
