--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/structured_configs/pe3.yml
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/structured_configs/pe3.yml
@@ -233,6 +233,7 @@ router_ospf:
     no_passive_interfaces:
     - Ethernet2
     redistribute:
-      bgp: {}
+      bgp:
+        enabled: true
 metadata:
   platform: vEOS-lab
