--- a/ansible_collections/arista/avd/molecule/eos_designs-mpls-isis-sr-ldp/intended/structured_configs/SITE2-LER1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-mpls-isis-sr-ldp/intended/structured_configs/SITE2-LER1.yml
@@ -587,6 +587,7 @@ router_ospf:
     - Ethernet6.100
     max_lsa: 10000
     redistribute:
-      bgp: {}
+      bgp:
+        enabled: true
 metadata:
   platform: 7280SR3
