--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
@@ -634,8 +634,10 @@ router_ospf:
     - Vlan150
     max_lsa: 15000
     redistribute:
-      bgp: {}
+      bgp:
+        enabled: true
       connected:
+        enabled: true
         route_map: RM_TEST
 vxlan_interface:
   vxlan1:
