--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-ospf.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-ospf.yml
@@ -19,8 +19,11 @@ router_ospf:
       default_information_originate:
       redistribute:
         static:
+          enabled: true
         connected:
+          enabled: true
         bgp:
+          enabled: true
       auto_cost_reference_bandwidth: 100
       maximum_paths: 10
       mpls_ldp_sync_default: true
@@ -73,12 +76,15 @@ router_ospf:
         metric: 100
       redistribute:
         static:
+          enabled: true
           route_map: rm-ospf-static
           include_leaked: true
         connected:
+          enabled: true
           route_map: rm-ospf-connected
           include_leaked: true
         bgp:
+          enabled: true
           route_map: rm-ospf-bgp
           include_leaked: true
       areas:
@@ -99,10 +105,13 @@ router_ospf:
         router_lsa:
       redistribute:
         static:
+          enabled: true
           route_map: rm-ospf-static
         connected:
+          enabled: true
           route_map: rm-ospf-connected
         bgp:
+          enabled: true
           route_map: rm-ospf-bgp
     - id: 400
       max_metric:
@@ -113,10 +122,13 @@ router_ospf:
           summary_lsa:
       redistribute:
         static:
+          enabled: true
           include_leaked: true
         connected:
+          enabled: true
           include_leaked: true
         bgp:
+          enabled: true
           include_leaked: true
     - id: 500
       max_metric:
@@ -126,6 +138,13 @@ router_ospf:
           on_startup: 222
           summary_lsa:
             override_metric: 456
+      redistribute:
+        static:
+          enabled: false
+        connected:
+          enabled: false
+        bgp:
+          enabled: false
     - id: 600
       areas:
         - id: 0.0.0.1
